# HelpExtender

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
buildae/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  HelpExtender.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
buildae/.cmake/api/v1/reply/: cache-v2-010506745e4b35486aa6.json  cache-v2-33a872049f989ec64e33.json  cmakeFiles-v1-b3678b465d660ea46028.json  cmakeFiles-v1-c802bc4a29f01817ba72.json  codemodel-v2-70cebd8a873adc2dac49.json  codemodel-v2-9f2925651e3b13fadf9b.json  directory-src.c++-Debug-656d58289a9faa50c21d.json  directory-src.c++.CommonLibSSE-Debug-660787d4d2b3a46134a5.json  directory-src.c++.CommonLibSSE-MinSizeRel-91f482caa4ff79405de9.json  directory-src.c++.CommonLibSSE-RelWithDebInfo-69f2becaaeccd5730461.json  directory-src.c++.CommonLibSSE-Release-57e0e00464efc9724098.json  index-2022-09-22T22-22-12-0868.json  (+16 more)
buildae/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
buildae/src/c++/: HelpExtender.vcxproj  HelpExtender.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  version.rc
buildae/src/c++/CommonLibSSE/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CommonLibSSE.sln  CommonLibSSE.vcxproj  CommonLibSSE.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
buildae/src/c++/include/: Version.h
cmake/: Version.h.in
src/: CMakeLists.txt
src/c++/: CMakeLists.txt  main.cpp
